fixed spacing on coach_stats

--- a/myproject/pygskin_webapp/static/coach_stats/coach_stats.css
+++ b/myproject/pygskin_webapp/static/coach_stats/coach_stats.css
@@ -1,115 +1,119 @@
-    #select-form {
-        display: contents;
-        align-items: center;
-        background-color: #008703;
-        color: #FFCC00;
-        font-family: 'Fugaz One', sans-serif;
-        text-transform: uppercase;
-        font-size: 18px;
-        height: 41px; /* must be 41 or greater unless you change size of select box */
-        width: 100%;
-        border: 40px;
-        border-radius: 40px;
-        padding: 0px;
-    }
-    
-    #id_coach {
-        border: none;
-        border-radius: 40px;
-        background-color: #008703;
-        color: #FFCC00;
-        font-family: 'Fugaz One', sans-serif;
-        text-transform: uppercase;
-        padding: 10px;
-        flex-grow: 1;
-        width: 100%;
-        margin-top: 10px;
-    }
-    
-    #coach-info {
-        font-family: 'DM Sans', sans-serif;
-        font-weight: bold;
-        margin-left: 5px;
-    }
-    .color-box {
-        background-color: #006106; /* Change this to any color you like */
-        display: inline-block;
-        color: white; /* Text color */
-        padding: 20px; /* Spacing inside the box */
-        border-radius: 8px; /* Rounded corners */
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-        min-width: 100%;
-    }
-    
-    .scrollable-table {
-        flex: 1;
-        overflow-x: auto;
-        max-height: 400px;
-        width: 100%;
-        text-align: center;
-        padding: 20px;
-    }
+#select-form {
+    display: contents;
+    align-items: center;
+    background-color: #008703;
+    color: #FFCC00;
+    font-family: 'Fugaz One', sans-serif;
+    text-transform: uppercase;
+    font-size: 18px;
+    height: 41px; /* must be 41 or greater unless you change size of select box */
+    width: 100%;
+    border: 40px;
+    border-radius: 40px;
+}
 
-    /* Table styles */
+#id_coach {
+    border: none;
+    border-radius: 40px;
+    background-color: #008703;
+    color: #FFCC00;
+    font-family: 'Fugaz One', sans-serif;
+    text-transform: uppercase;
+    padding: 10px;
+    flex-grow: 1;
+    width: 100%;
+    margin-top: 10px;
+}
 
-    .scrollable-table table {
-        width: 100%;
-        border-collapse: separate; /* Ensures border-radius will work */
-        border-spacing: 10px; /* Adds space between table cells */
-        background-color: #006106; /* Background for the entire table */
-        border-radius: 15px; /* Rounds the corners of the table */
-        padding: 10px;
-        margin: auto; /* Centers the table */
-    }
+#coach-info {
+    font-family: 'DM Sans', sans-serif;
+    font-weight: bold;
+    margin-left: 5px;
+}
+.color-box {
+    background-color: #006106; /* Change this to any color you like */
+    display: inline-block;
+    color: white; /* Text color */
+    padding: 20px; /* Spacing inside the box */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    min-width: 100%;
+    max-width: 100%;
+}
 
-    /* Header cell styles */
+.scrollable-table {
+    flex: 1;
+    overflow-x: auto;
+    max-height: 400px;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+}
 
-    .scrollable-table th {
-        background-color: #008703;
-        color: #FFCC00;
-        font-family: 'Fugaz One', sans-serif;
-        font-size: 18px;
-        padding: 10px;
-        border-radius: 10px;
-        text-transform: uppercase;
-    }
+/* Table styles */
 
-    /* Body cell styles */
+.scrollable-table table {
+    width: 100%;
+    border-collapse: separate; /* Ensures border-radius will work */
+    border-spacing: 10px; /* Adds space between table cells */
+    background-color: #006106; /* Background for the entire table */
+    border-radius: 15px; /* Rounds the corners of the table */
+    padding: 10px;
+    margin: auto; /* Centers the table */
+}
 
-    .scrollable-table td {
-        background-color: #F1EFEF;
-        font-family: 'Fugaz One', sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        padding: 10px;
-        border-radius: 10px;
-        text-transform: uppercase;
-        color: #006106;
-    }
+/* Header cell styles */
 
-    /* Odd rows */
+.scrollable-table th {
+    background-color: #008703;
+    color: #FFCC00;
+    font-family: 'Fugaz One', sans-serif;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 10px;
+    text-transform: uppercase;
+}
 
-    .scrollable-table tbody tr:nth-of-type(odd) td {
-        background-color: #F1EFEF;
-        color: #008703;
-    }
+/* Body cell styles */
 
-    /* Even rows */
+.scrollable-table td {
+    background-color: #F1EFEF;
+    font-family: 'Fugaz One', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    color: #006106;
+}
 
-    .scrollable-table tbody tr:nth-of-type(even) td {
-        background-color: #F1EFEF;
-        color: #008703;
-    }
+/* Odd rows */
 
-    #select-form label {
-        display: none;
-    }
+.scrollable-table tbody tr:nth-of-type(odd) td {
+    background-color: #F1EFEF;
+    color: #008703;
+}
 
-   /* 
-    !! setting the errorlist to display none -
-        bit of a weird fix, before you select a coach it says
-        "* this field is required", you can delete it and see
-    */
-   .errorlist {
-        display: none;
-    }
+/* Even rows */
+
+.scrollable-table tbody tr:nth-of-type(even) td {
+    background-color: #F1EFEF;
+    color: #008703;
+}
+
+#select-form label {
+    display: none;
+}
+
+/* 
+!! setting the errorlist to display none -
+    bit of a weird fix, before you select a coach it says
+    "* this field is required", you can delete it and see
+*/
+.errorlist {
+    display: none;
+}
+
+.container {
+    padding: 20px 7vw;
+}
